fix native view

--- a/app/src/main/res/layout/fragment_ads_mopub.xml
+++ b/app/src/main/res/layout/fragment_ads_mopub.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+     android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:id="@+id/ll_ads_view">
     <Button
         android:id="@+id/btn_interstitial"
         android:layout_width="match_parent"
@@ -11,32 +13,43 @@
         android:id="@+id/btn_rewardVideo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btn_interstitial"
         android:text="激励视频"/>
     <Button
         android:id="@+id/btn_native"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btn_rewardVideo"
         android:text="原生广告"/>
+    <Button
+        android:id="@+id/btn_hide_native"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="隐藏原生广告"/>
+    <Button
+        android:id="@+id/btn_request_native"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="请求原生广告"/>
     <Button
         android:id="@+id/btn_banner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btn_native"
         android:text="横幅广告"/>
+    <Button
+        android:id="@+id/btn_hide_banner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="隐藏横幅广告"/>
 
-    <com.mopub.mobileads.MoPubView
+    <!--<com.mopub.mobileads.MoPubView
         android:id="@+id/adview"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
-        android:layout_below="@id/btn_banner"
-        />
+        />-->
     <RelativeLayout
         android:id="@+id/native_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/btn_banner"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"></RelativeLayout>
-</RelativeLayout>
+</LinearLayout>
