--- a/app/src/main/res/layout/facebook_native.xml
+++ b/app/src/main/res/layout/facebook_native.xml
@@ -21,14 +21,15 @@
 
     <TextView
         android:id="@+id/facebook_native_title"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="84dp"
         android:layout_marginStart="84dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="10dp"
+        android:singleLine="true"
         android:textColor="@android:color/darker_gray"
         android:textStyle="bold" />
 
@@ -38,9 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/native_icon_image"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
+        android:layout_below="@id/facebook_native_title"
+        android:layout_marginLeft="84dp"
         android:layout_marginTop="10dp"
         android:textColor="@android:color/darker_gray" />
 
@@ -48,28 +48,22 @@
     <com.facebook.ads.MediaView
         android:id="@+id/facebook_media"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/native_text"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="200dp"
+        android:layout_below="@id/facebook_native_icon_image"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="10dp"
         android:background="@null" />
+
 
     <Button
         android:id="@+id/facebook_native_cta"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/native_main_image"
-        android:layout_marginEnd="10dp"
+        android:layout_below="@+id/facebook_media"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
         android:clickable="true"
         android:focusable="true"
-        android:paddingBottom="10dp"
         android:textColor="@android:color/black"
         android:textSize="12sp"
         android:textStyle="bold" />
