--- a/app/src/main/res/layout/native_ad_list_item.xml
+++ b/app/src/main/res/layout/native_ad_list_item.xml
@@ -48,7 +48,7 @@
     <ImageView
         android:id="@+id/native_main_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/native_main_image_height"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/native_text"
@@ -56,6 +56,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:background="@null"
+        android:contentDescription="@string/native_main_image"
         android:scaleType="centerCrop" />
 
     <Button
@@ -71,6 +72,7 @@
         android:clickable="true"
         android:focusable="true"
         android:paddingBottom="10dp"
+        android:text="@string/learn_more"
         android:textColor="@android:color/black"
         android:textSize="12sp"
         android:textStyle="bold" />
@@ -82,6 +84,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:contentDescription="@string/native_privacy_information_icon_image"
         android:padding="10dp" />
 
 </RelativeLayout>
